# Langford-Problem-4th-year---1st-semester-2024-

./: README.MD  README_old.MD
code/: CMakeLists.txt  analyse.py  analyse_no_graph.py  classSrc.py  compare.py  fullMain.cpp  lightMain.cpp  noMain.cpp  teste_mpi_multiple_worker.sh  teste_openmp_multiple_worker.sh
code/documentation/: da.plantuml.txt  dc_V2.plantuml.txt  dispatcher.jsonuml.txt  resolver.jsonuml.txt  worker.jsonuml.txt
code/src/: Helper.hpp  Langford.hpp  Solution.hpp
code/src/Aruka/: Task.hpp  TrackerAllocator.hpp
code/src/Aruka/MPI/: HybridStaticResolver.hpp  HybridStaticWorker.hpp
code/src/Aruka/Mono/: StandardQueueDispatcher.hpp  StandardResolver.hpp  StandardWorker.hpp
code/src/Aruka/Mono/Tracker/: StandardDispatcherTracker.hpp  StandardResolverTracker.hpp  StandardWorkerTracker.hpp
code/src/Aruka/OpenMP/: ConcurrentParallelQueueDispatcher.hpp  HybridStaticDispatcher.hpp  HybridStaticResolver.hpp  HybridStaticResolverOld.hpp  HybridStaticWorker.hpp  MonoQueueDispatcher.hpp  ParallelResolver.hpp  ParallelWorker.hpp  SynchronizedResolver.hpp  SynchronizedWorker.hpp
code/src/Aruka/OpenMP/Tracker/: StandardDispatcherTracker.hpp  StandardResolverTracker.hpp  StandardWorkerTracker.hpp
code/src/Aruka/Tracker/: DispatcherEvent.hpp  DispatcherEventType.hpp  NoDispatcherTracker.hpp  NoResolverTracker.hpp  NoWorkerTracker.hpp  WorkerEvent.hpp  WorkerEventType.hpp
code/src/Tracker/: Exporter.hpp  NoMemoryTracker.hpp  RapidExporter.hpp  RapidStandardExporter.hpp  StandardExporter.hpp  StandardMemoryTracker.hpp
code/template/: index.jinja2.html  index_compare.jinja2.html
rapport/: CHPS0701_rapport_KRUK_Timothe.docx
resultats/: resultats.xlsx
resultats/full_13_parallele_32_threads/: index.html
resultats/full_13_parallele_7_threads/: index.html
resultats/full_13_synchro_32_threads/: index.html
resultats/full_13_synchro_4_threads/: index.html
resultats/full_13_synchro_8_threads/: index.html
resultats/full_15_hybride/: index.html
resultats/full_16_hybride_32_threads/: index.html
resultats/full_16_hybride_8threads/: index.html
resultats/hybride_14/: index.html
resultats/hybride_14/light_1/: resolver.json
resultats/hybride_14/light_10/: resolver.json
resultats/hybride_14/light_11/: resolver.json
resultats/hybride_14/light_12/: resolver.json
resultats/hybride_14/light_13/: resolver.json
resultats/hybride_14/light_14/: resolver.json
resultats/hybride_14/light_15/: resolver.json
resultats/hybride_14/light_16/: resolver.json
resultats/hybride_14/light_2/: resolver.json
resultats/hybride_14/light_3/: resolver.json
resultats/hybride_14/light_4/: resolver.json
resultats/hybride_14/light_5/: resolver.json
resultats/hybride_14/light_6/: resolver.json
resultats/hybride_14/light_7/: resolver.json
resultats/hybride_14/light_8/: resolver.json
resultats/hybride_14/light_9/: resolver.json
resultats/hybride_15/: index.html
resultats/hybride_15/light_1/: resolver.json
resultats/hybride_15/light_10/: resolver.json
resultats/hybride_15/light_11/: resolver.json
resultats/hybride_15/light_12/: resolver.json
resultats/hybride_15/light_13/: resolver.json
resultats/hybride_15/light_14/: resolver.json
resultats/hybride_15/light_15/: resolver.json
resultats/hybride_15/light_16/: resolver.json
resultats/hybride_15/light_2/: resolver.json
resultats/hybride_15/light_3/: resolver.json
resultats/hybride_15/light_4/: resolver.json
resultats/hybride_15/light_5/: resolver.json
resultats/hybride_15/light_6/: resolver.json
resultats/hybride_15/light_7/: resolver.json
resultats/hybride_15/light_8/: resolver.json
resultats/hybride_15/light_9/: resolver.json
resultats/hybride_mpi_14/: index.html
resultats/hybride_mpi_14/light_1/: resolver.json
resultats/hybride_mpi_14/light_10/: resolver.json
resultats/hybride_mpi_14/light_11/: resolver.json
resultats/hybride_mpi_14/light_12/: resolver.json
resultats/hybride_mpi_14/light_13/: resolver.json
resultats/hybride_mpi_14/light_14/: resolver.json
resultats/hybride_mpi_14/light_15/: resolver.json
resultats/hybride_mpi_14/light_16/: resolver.json
resultats/hybride_mpi_14/light_2/: resolver.json
resultats/hybride_mpi_14/light_3/: resolver.json
resultats/hybride_mpi_14/light_4/: resolver.json
resultats/hybride_mpi_14/light_5/: resolver.json
resultats/hybride_mpi_14/light_6/: resolver.json
resultats/hybride_mpi_14/light_7/: resolver.json
resultats/hybride_mpi_14/light_8/: resolver.json
resultats/hybride_mpi_14/light_9/: resolver.json
resultats/hybride_mpi_15/: index.html
resultats/hybride_mpi_15/light_1/: resolver.json
resultats/hybride_mpi_15/light_10/: resolver.json
resultats/hybride_mpi_15/light_11/: resolver.json
resultats/hybride_mpi_15/light_12/: resolver.json
resultats/hybride_mpi_15/light_13/: resolver.json
resultats/hybride_mpi_15/light_14/: resolver.json
resultats/hybride_mpi_15/light_15/: resolver.json
resultats/hybride_mpi_15/light_16/: resolver.json
resultats/hybride_mpi_15/light_2/: resolver.json
resultats/hybride_mpi_15/light_3/: resolver.json
resultats/hybride_mpi_15/light_4/: resolver.json
resultats/hybride_mpi_15/light_5/: resolver.json
resultats/hybride_mpi_15/light_6/: resolver.json
resultats/hybride_mpi_15/light_7/: resolver.json
resultats/hybride_mpi_15/light_8/: resolver.json
resultats/hybride_mpi_15/light_9/: resolver.json
resultats/memory_report/: massif.out.parallele_8T_14F  massif.out.sequentiel_14F  massif.out.sequentiel_15F  massif.out.synchronized_8T_14_F
resultats/parallele_14/: index.html
resultats/parallele_14/light_1/: resolver.json
resultats/parallele_14/light_10/: resolver.json
resultats/parallele_14/light_11/: resolver.json
resultats/parallele_14/light_12/: resolver.json
resultats/parallele_14/light_13/: resolver.json
resultats/parallele_14/light_14/: resolver.json
resultats/parallele_14/light_15/: resolver.json
resultats/parallele_14/light_16/: resolver.json
resultats/parallele_14/light_2/: resolver.json
resultats/synchronized_14/: index.html
(+23 files in other folders)
